# aoc

./: .gitignore  prepare_day.py  requirements.txt  run.py
2015/: prepare_day.py
2015/day-01/: README.md  day1.cc  day1.py
2015/day-02/: README.md  day02.py  day2.cc
2015/day-03/: README.md  day3.py
2015/day-04/: README.md  day4.py
2015/day-05/: README.md  day5.py
2015/day-06/: README.md  day6.py
2015/day-07/: day7.py
2015/day-08/: README.md  day8.py
2015/day-09/: README.md  day9.py
2015/day-10/: README.md  day10.py
2015/day-11/: README.md  day11.py
2015/day-12/: day12.py
2015/day-13/: day13.py
2015/day-14/: README.md  a.py  day14.py
2015/day-15/: README.md  day15.py  fuckyou.py
2015/day-16/: day16.py
2015/day-17/: README.md  day17.py
2015/day-18/: README.md  day18.py
2016/: prepare_day.py
2016/day-02/: a  (+2 more)
2017/: prepare_day.py
2019/: prepare_day.py
2020/: Untitled.ipynb  aaaaa.py  prepare_day.py
AoCUtils/: __init__.py  __main__.py  utils.py
CSharp/: CSharp.sln
aocUtils/: __init__.py  pyproject.toml  readme.md  setup.py
aocUtils/aocUtils/: utils.py
day-02/: README.md
day-04/: day4.py
day-07/: day7.py
day-08/: day8.py
day-1/: in.md
day-10/: README.md  day10.py
day-11/: README.md  day11.py
day-12/: README.md  day12.py  input
day-14/: README.md  input
day-15/: README.md  day15.py
day-16/: day16.py  sinput
day-3/: README.md
day-4/: README.md
day-5/: README.md  day5.py
day-6/: README.md  day6.py
day-7/: README.md  day7.py
day-9/: README.md  day9.py  new_day9.py  test.py
rust/: Cargo.toml
(+216 files in other folders)
