[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "aocUtils-smolsbs"
version = "0.1.1"
authors = [
  { name="Shino"},
]
description = "Tools for advent of code"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
